--- a/app/views/staffs/_staffs_grid.html.erb
+++ b/app/views/staffs/_staffs_grid.html.erb
@@ -20,9 +20,9 @@
   end
 
   g.column html: {class: 'project-actions'} do |staff|
-    [
-      link_to(fa_icon("pencil"), edit_staff_path(staff), class: 'btn btn-white btn-xs', data: {toggle: 'tooltip'}, title: t('buttons.edit')),
-      link_to(fa_icon("trash"), staff_path(staff), class: 'btn btn-danger btn-xs', method: :delete, data: {toggle: 'tooltip', confirm: t('confirms.delete')}, title: t('buttons.delete'))
-    ].join(' ').html_safe
+    content = []
+    content << link_to(fa_icon("pencil"), edit_staff_path(staff), class: 'btn btn-white btn-xs', data: {toggle: 'tooltip'}, title: t('buttons.edit')) if can? :update, staff
+    content << link_to(fa_icon("trash"), staff_path(staff), class: 'btn btn-danger btn-xs', method: :delete, data: {toggle: 'tooltip', confirm: t('confirms.delete')}, title: t('buttons.delete')) if can? :manage, Staff
+    content.join(' ').html_safe
   end
 end -%>
