--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -14,11 +14,13 @@
 </div>
 
 <div class="wrapper wrapper-content">
-  <div class="row">
-      <div class="col-lg-12 m-b-md">
-          <%= link_to t('activerecord.text.new_instance', model: Staff.model_name.human), new_staff_path, class: 'btn-primary btn-w-m btn' %>
-      </div>
-  </div>
+    <% if can? :manage, Staff %>
+    <div class="row">
+        <div class="col-lg-12 m-b-md">
+            <%= link_to t('activerecord.text.new_instance', model: Staff.model_name.human), new_staff_path, class: 'btn-primary btn-w-m btn' %>
+        </div>
+    </div>
+    <% end %>
     <div class="row">
         <div class="col-lg-10">
             <div class="ibox">
