--- a/app/views/staffs/show.html.erb
+++ b/app/views/staffs/show.html.erb
@@ -19,7 +19,7 @@
                 <div class="col-lg-12">
                     <div class="m-b-md">
                         <div class="pull-right">
-                          <%= link_to fa_icon('pencil', text: t('buttons.edit')), edit_staff_path(@staff), class: 'btn btn-white btn-sm' %>
+                          <%= link_to fa_icon('pencil', text: t('buttons.edit')), edit_staff_path(@staff), class: 'btn btn-white btn-sm' if can? :update, @staff %>
                         </div>
 
                         <h2><%= @staff.name %></h2>
