--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,15 +3,15 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <%= f.input :name %>
-    <%= f.input :short_name %>
-    <%= f.input :code %>
-    <%= f.input :client_code %>
-    <%= f.input :initial_fund %>
+    <%= f.input :name, input_html: {autocomplete: 'off'} %>
+    <%= f.input :short_name, input_html: {autocomplete: 'off'} %>
+    <%= f.input :code, input_html: {autocomplete: 'off'} %>
+    <%= f.input :client_code, input_html: {autocomplete: 'off'} %>
+    <%= f.input :initial_fund, input_html: {autocomplete: 'off'} %>
   </div>
   <div class="col-lg-6">
-    <%= f.simple_fields_for :product_manager do |pm| %>
-      <%= pm.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.product_manager') %>
+    <%= f.simple_fields_for :staff do |pm| %>
+      <%= pm.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.staff') %>
       <%= pm.input :id, as: :hidden %>
     <% end %>
     <%= f.input :product_type, collection: Product.product_types, as: :radio_buttons %>
@@ -23,39 +23,28 @@
 
 <div class="row">
   <div class="col-lg-6">
-    <%= f.input :delegation_started_at, as: :date_time_picker %>
-    <%= f.input :delegation_duration, as: :string %>
+    <%= f.input :delegation_started_at, as: :date_picker %>
   </div>
   <div class="col-lg-6">
-    <%= f.input :delegation_ended_at, as: :date_time_picker %>
+    <%= f.input :delegation_ended_at, as: :date_picker %>
   </div>
 </div>
 
 <div class="hr-line-dashed"></div>
 
 <div class="row">
-  <div class="col-lg-6">
-    <%= f.simple_fields_for :sales_department do |department| %>
-      <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.sales_department') %>
-      <%= department.input :id, as: :hidden %>
-    <% end %>
-
-    <%= f.simple_fields_for :operation_department do |department| %>
-      <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.operation_department') %>
-      <%= department.input :id, as: :hidden %>
-    <% end %>
-  </div>
-  <div class="col-lg-6">
-    <%= f.simple_fields_for :consultant_reference_department do |department| %>
-      <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.consultant_reference_department') %>
-      <%= department.input :id, as: :hidden %>
-    <% end %>
-
-    <%= f.simple_fields_for :consultant do |department| %>
-      <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.consultant_name') %>
-      <%= department.input :id, as: :hidden %>
-    <% end %>
-  </div>
+    <div class="col-lg-6">
+      <%= f.simple_fields_for :sales_department do |department| %>
+        <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.sales_department') %>
+        <%= department.input :id, as: :hidden %>
+      <% end %>
+    </div>
+    <div class="col-lg-6">
+      <%= f.simple_fields_for :operation_department do |department| %>
+        <%= department.input :name, input_html: {autocomplete: 'off'}, label: t('activerecord.attributes.product.operation_department') %>
+        <%= department.input :id, as: :hidden %>
+      <% end %>
+    </div>
 </div>
 
 <div class="hr-line-dashed"></div>
@@ -72,14 +61,14 @@
 
 <script type="text/javascript">
 
-  $.get('/product_managers.json', function(data) {
-    $('#product_product_manager_attributes_name').typeahead({
+  $.get('/staffs.json', function(data) {
+    $('#product_staff_attributes_name').typeahead({
       source: data
     }).change(function() {
       var current = $(this).typeahead("getActive");
       if (current) {
         if (current.name == $(this).val()) {
-          $('#product_product_manager_attributes_id').val(current.id);
+          $('#product_staff_attributes_id').val(current.id);
         }
       }
     });
