--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,8 +34,8 @@
                 <div class="col-lg-5">
                     <dl class="dl-horizontal">
 
-                        <dt><%= t('activerecord.attributes.product.product_manager') %>:</dt>
-                        <dd><%= @product.product_manager.name if @product.product_manager %> </dd>
+                        <dt><%= t('activerecord.attributes.product.staff') %>:</dt>
+                        <dd><%= @product.staff.name if @product.staff %> </dd>
                         <dt><%= t('activerecord.attributes.product.name') %>:</dt>
                         <dd><%= @product.name %></dd>
                         <dt><%= t('activerecord.attributes.product.short_name') %>:</dt>
@@ -70,12 +70,8 @@
                 </div>
                 <div class="col-lg-7">
                     <dl class="dl-horizontal">
-
-                      <dt><%= t('activerecord.attributes.product.delegation_duration') %>:</dt>
-                      <dd><%= @product.delegation_duration %> </dd>
-                      <dt><%= t('activerecord.attributes.product.year_day_count') %>:</dt>
-                      <dd><%= @product.year_day_count %> </dd>
-
+                        <dt><%= t('activerecord.attributes.product.delegation_duration') %>:</dt>
+                        <dd><%= @product.delegation_duration %> </dd>
                     </dl>
                 </div>
             </div>
