--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -99,6 +99,35 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-lg-5">
+                    <dl class="dl-horizontal">
+
+                        <dt><%= t('activerecord.attributes.product.trustor_name') %>:</dt>
+                        <dd><%= @product.trustor_bank_account.trustor.name if @product.trustor_bank_account %></dd>
+                        <dt><%= t('activerecord.attributes.product.trustor_bank_name') %>:</dt>
+                        <dd><%= @product.trustor_bank_account.bank.name if @product.trustor_bank_account %></dd>
+                        <dt><%= t('activerecord.attributes.product.trustor_bank_account_name') %>:</dt>
+                        <dd><%= @product.trustor_bank_account.name if @product.trustor_bank_account %> </dd>
+                        <dt><%= t('activerecord.attributes.product.trustor_bank_account_number') %>:</dt>
+                        <dd><%= @product.trustor_bank_account.number if @product.trustor_bank_account %> </dd>
+
+                    </dl>
+                </div>
+                <div class="col-lg-7">
+                    <dl class="dl-horizontal">
+
+                        <dt><%= t('activerecord.attributes.product.securities_broker_account_name') %>:</dt>
+                        <dd><%= @product.securities_broker_account.name if @product.securities_broker_account %></dd>
+                        <dt><%= t('activerecord.attributes.product.securities_broker_name') %>:</dt>
+                        <dd><%= @product.securities_broker_account.securities_broker.name if @product.securities_broker_account %></dd>
+                        <dt><%= t('activerecord.attributes.product.securities_broker_account_number') %>:</dt>
+                        <dd><%= @product.securities_broker_account.number if @product.securities_broker_account %> </dd>
+
+                    </dl>
+                </div>
+            </div>
+
             <div class="row m-t-sm">
                 <div class="col-lg-12">
                     <div class="panel blank-panel">
