--- a/app/views/products/_show_tab_fee.html.erb
+++ b/app/views/products/_show_tab_fee.html.erb
@@ -1,4 +1,13 @@
 <div class="row">
+    <div class="col-lg-12">
+        <div class="m-b-md">
+            <div class="">
+                <%= link_to fa_icon('pencil', text: '修改费用信息'), nil, class: 'btn btn-white btn-sm' %>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
     <div class="col-lg-5">
         <dl class="dl-horizontal">
 
